# rust_playground

./: .gitignore  LICENSE  README.md
TRPL/: readme.md
actix_messages/: Cargo.toml  readme.md
actix_messages/src/: lib.rs  main.rs
actix_rest_api/: .env  .rustfmt.toml  Cargo.toml  docker-compose.yml  readme.md  run.sh  run_dev.sh
actix_rest_api/migrations/2020-03-22-084748_create_user/: up.sql
actix_rest_api/src/: api_error.rs  db.rs  main.rs
actix_rest_api/src/user/: mod.rs  model.rs  routes.rs
actix_todo/: .env  Cargo.toml
actix_todo/src/: config.rs  handlers.rs  models.rs
actix_tp1/: Cargo.toml  readme.md
adder/: .gitignore  Cargo.toml  readme.md
axum_askama_template/: Cargo.toml  readme.md
axum_askama_template/src/: main.rs
axum_url_shortener/: Cargo.toml  readme.md
axum_url_shortener/src/: main.rs  urls.rs
axum_websockets_example/: Cargo.toml
clipstash/: .gitignore  Cargo.toml
clipstash/migrations/: 20211013112958_api_key.sql  readme.md
clipstash/src/lib/: mod.rs
clipstash/src/lib/data/: api_key.rs  clip.rs  database.rs  dbid.rs  get_clip.rs  hit_count.rs  maintenance.rs  mod.rs  new_clip.rs  query.rs  transaction.rs  update_clip.rs
clipstash/src/lib/domain/: maintenance.rs  mod.rs  time.rs
clipstash/src/lib/domain/clip/: mod.rs
clipstash/src/lib/domain/clip/field/: clip_id.rs  content.rs  expires.rs  mod.rs  password.rs  shortcode.rs  title.rs
clipstash/src/lib/service/: api_key.rs  get_clip.rs  hit_count.rs  maintenance.rs  mod.rs  new_clip.rs  service_error.rs  update_clip.rs
clipstash/src/lib/web/: api.rs  clip.rs  ctx.rs  forms.rs  hit_count.rs  http.rs  mod.rs  page_error.rs  renderer.rs
cloudflare_workers_rustwasm_helloworld/: Cargo.toml  readme.md  wrangler.toml
dioxus-guide-05-web-hackernews/: Cargo.toml  Dioxus.toml  readme.md  run.sh
dioxus-guide-05-web-hackernews/assets/: favicons.txt  tailwind.css
dioxus-guide-05-web-hackernews/src/: components.rs  fetch_data.rs  main.rs  model.rs  state.rs
egui_demo_app/: Cargo.toml
egui_demo_app/src/: main.rs
egui_news/: .gitignore  Cargo.toml  readme.md
egui_news/api_news/: Cargo.toml
egui_news/api_news/src/: lib.rs
egui_news/ui_t/: Cargo.toml
egui_news/ui_t/src/: theme.rs
ezytutors/: .gitignore  Cargo.toml  README.md
generics_traits_lifetimes/: Cargo.toml  readme.md
generics_traits_lifetimes/src/: generics_list_get_max_cpy.rs  generics_struct_tagged.rs
guessing_game/: Cargo.toml
hyper-service/: .gitignore  Cargo.toml
hyper-service/src/: main.rs  service-ex2.rs  service_ex1.rs
hyper_bb8_pgdb/: Cargo.toml  readme.md  run_pgdb.sh
leptos-xp/: Cargo.toml  README.md  input.css  post.db  run-dev.sh
leptos_srv_fns_axum/: Cargo.toml  rust-toolchain.toml
leptos_tutorial/: Cargo.toml  index.html  readme.md
minigrep/: Cargo.toml  readme.md
pipeviewer/: .gitignore  .rustfmt.toml  Cargo.toml  readme.md
pipeviewer/src/: args.rs  lib.rs  main.rs  read.rs  stats.rs  write.rs
pipeviewer/src/stats/: mod.rs  stats_logic.rs  timer.rs
ps-tokio/: Cargo.toml  readme.md
rabbitmq_ha_tester/: .env  Cargo.toml  readme.md
rabbitmq_ha_tester/src/: q_reader.rs
rust-htmx-table-sorting/: Cargo.toml  readme.md
rust_closures/: Cargo.toml
rust_closures_iterators/: Cargo.toml
rust_collections/: .gitignore  Cargo.toml
rust_concurrency/: Cargo.toml  readme.md
rust_concurrency/src/: main.rs  msg_pass_thread.rs  sharing_ownership_threads.rs  spawning_a_thread.rs
rust_data_structures/: Cargo.toml  readme.md
rust_data_structures/src/: lib.rs
rust_data_structures/src/lists/: mod.rs  new_txn_log.rs  txn_log.rs
rust_data_structures/src/queues/: mod.rs  simple_queue.rs
rust_datatypes/: Cargo.toml
rust_errors/: Cargo.toml
rust_generics_traits/: .gitignore  Cargo.toml
rust_generics_traits/src/: generics_list_get_max_cpy.rs  generics_struct_tagged.rs  trait_objects_attrs.rs
rust_lang_journey/: Cargo.toml  readme.md
rust_lang_journey/src/: borrowing_ex1.rs  macros_ex1.rs  main.rs  ownership_ex1.rs  structs_ex1.rs
rust_oop/: .gitignore  Cargo.toml
rust_oop/src/: avg_coll.rs  avg_coll_bin.rs  blog.rs  blog_bin.rs  lib.rs
rust_oop/src/my_colls/: mod.rs
rust_ownership/: Cargo.toml
rust_redis_clone_sider/: Cargo.toml  readme.md
rust_rocket_hello/: Cargo.toml  readme.md  run.sh  stress.sh
rust_simple_http_server/: Cargo.toml  readme.md  rustfmt.toml
rust_sqlsrv_tiberius/: Cargo.toml  readme.md
rust_sqlsrv_tiberius/src/: main.rs
rust_sqlx_sqlsrv_test/: Cargo.toml  readme.md
rust_xps/: Cargo.toml  readme.md
rust_xps/data/: transactions.json
shuttledxpswarmup/: Cargo.toml  Shuttle.toml  readme.md
shuttledxpswarmup/db/: schema.sql
shuttledxpswarmup/src/: app.rs  errors.rs  lib.rs  model.rs  txt_handlers.rs
slint_rust_memory_tiles/: Cargo.toml  README.md  build.rs  build_web.sh  index.html  run_web.sh
slint_rust_memory_tiles/src/: main.rs
slint_rust_memory_tiles/ui/: main-window.slint
todo-actix/: .gitignore  (+1 more)
todo_actix/: .env  Cargo.toml  database.sql  docker-compose.yml  readme.md
todo_actix/src/: config.rs  db.rs  handlers.rs  main.rs  models.rs
wa_image_effects/: .gitignore  Cargo.toml  package-lock.json  package.json  readme.md  webpack.config.js
wa_image_effects/public/: index.html  main.js
wa_image_effects/src/: lib.rs
warp_auth_server/: Cargo.toml  readme.md
warp_auth_server/src/: main.rs
warp_collab_qa_srv/: Cargo.toml  questions.json
warp_collab_qa_srv/.local/: readme.md
warp_collab_qa_srv/.local/thunder-tests/: thunderCollection.db  thunderclient.db
warp_collab_qa_srv/src/: main.rs
warp_todo_crud_ex1/: Cargo.toml  db.sql  readme.md  run_db.sh
warp_todo_crud_ex1/src/: data.rs  db.rs  error.rs  handler.rs  main.rs
warp_todo_crud_ex2/be/: Cargo.toml  ct.sh  readme.md  run_pgdb.sh
warp_todo_crud_ex2/be/ops/: docker-compose.yml
warp_todo_crud_ex2/be/ops/db_migration/: 00_recreate_db.sql  01_create_schema.sql  02_dev_seed.sql
warp_todo_crud_ex2/be/src/: lib.rs
warp_todo_crud_ex2/be/src/model/: db.rs  todo.rs
warp_todo_crud_ex2/be/src/zz_tests/: model_db.rs  model_todo.rs
(+114 files in other folders)
