[package]
name = "actix_rest_api"
version = "0.1.0"
authors = ["devisions <marius.ileana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0"
actix-web = "2.0"
chrono = { version = "0.4", features = [ "serde" ]}
diesel = { version = "1.4", features = [ "postgres", "r2d2", "uuidv07", "chrono" ] }
diesel_migrations = "1.4"
dotenv = "0.15"
env_logger = "0.7"
lazy_static = "1.4"
listenfd = "0.3"
log = "0.4"
r2d2 = "0.8"
serde = "1.0"
serde_json = "1.0"
uuid = { version = "0.7", features = [ "serde", "v4"] }
