[package]
authors = ["dxps <marius.ileana@gmail.com>"]
edition = "2018"
name = "actix-todo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-rt = "1.0.0"
actix-web = "2.0.0"
config = "0.10.1"
deadpool-postgres = "0.5.4"
dotenv = "0.15.0"
serde = {version = "1.0.104", features = ["derive"]}
tokio-pg-mapper = "0.1.4"
tokio-pg-mapper-derive = "0.1.4"
tokio-postgres = "0.5.2"
