[package]
name = "axum_askama_template"
version = "0.1.0"
authors = ["Oleks Pickle <aleks.work2222+gh@gmail.com>"] 
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = "0.7.4"
itertools = "0.12.1"
# serde = "1.0.160"
# serde_json = "1.0.96"
tokio = { version = "1.43", features = ["full"] }
tower-http = { version = "0.5.1", features = ["fs", "trace"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Without it will be around 11M
# Uncomment to have up to 3x less binary size: the template itself goes from 5.9M to 2.1M
# https://doc.rust-lang.org/cargo/reference/profiles.html
# if you want more optimization there is only no_std path and other hacks
#[profile.release]
#opt-level = "z"     # Optimize for size.
#lto = true          # Enable Link Time Optimization
#panic = "abort"     # Abort on panic
#strip = "symbols"   # (or true) Automatically strip symbols from the binary ().
#codegen-units = 1   # Reduce number of codegen units to increase optimizations.
