[package]
name = "axum_url_shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
base64 = "0.22.1"
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace", "timeout"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
