[package]
edition = "2018"
name = "clipstash"
version = "0.1.0"

[lib]
name = "clipstash"
path = "src/lib/mod.rs"

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
derive_more = "0.99"
handlebars = {version = "4", features = ["dir_source"]}
rand = "0.8"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
sqlx = {version = "0.5", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono", "uuid"]}
thiserror = "1"
uuid = {version = "0.8", features = ["serde", "v4"]}
