[package]
edition = "2018"
name = "clipstash"
version = "0.1.0"

[lib]
name = "clipstash"
path = "src/lib/mod.rs"

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
crossbeam-channel = "0.5"
derive_more = "0.99"
dotenv = "0.15"
handlebars = {version = "4", features = ["dir_source"]}
parking_lot = "0.11"
rand = "0.8"
rocket = {version = "0.5.0-rc.1", features = ["json"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
sqlx = {version = "0.5", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono", "uuid"]}
structopt = "0.3"
thiserror = "1"
tokio = {version = "1.8.0"}
uuid = {version = "0.8", features = ["serde", "v4"]}
