[package]
name = "traits_and_generic_types"
version = "0.1.0"
authors = ["<marius.ileana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dyn_dispatch_show1"
path = "src/dyn_dispatch_show1.rs"

[[bin]]
name = "generics_struct_tagged"
path = "src/generics_struct_tagged.rs"

[[bin]]
name = "generics_list_get_max_ref"
path = "src/generics_list_get_max_ref.rs"

[[bin]]
name = "generics_list_get_max_cpy"
path = "src/generics_list_get_max_cpy.rs"
