[package]
name = "hyper-service"
version = "0.1.0"
authors = ["devisions <marius.ileana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "1.4.1"
## explicitly needed in "service_ex1.rs"
tokio = { version = "1.40.0", features = [ "full" ] }
futures = "0.3.4"
lazy_static = "1.4.0"
serde = "1.0"
serde_derive = "1.0"
tera = "1.0"
log = "0.4"
pretty_env_logger = "0.5.0"

[dependencies.uuid]
features = [ "serde", "v4" ]
version = "1.10.0"

[[bin]]
name = "service-ex1"
path = "src/service_ex1.rs"

[[bin]]
name = "service-ex2"
path = "src/service-ex2.rs"
