[package]
name = "rabbitmq_ha_tester"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "q-reader"
path = "src/q_reader.rs"

[dependencies]
# futures-core = "0.3.30"
# futures-io = "0.3.30"
futures-lite = "2.3.0"
lapin = "2.5.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
async-global-executor = "2.4.1"
dotenv = "0.15.0"

[dev-dependencies]
