[package]
name = "rust_concurrency"
version = "0.1.0"
authors = ["devisions <marius.ileana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "spawning_a_thread"
path = "src/spawning_a_thread.rs"

[[bin]]
name = "msg_pass_thread"
path = "src/msg_pass_thread.rs"

[[bin]]
name = "sharing_ownership_threads"
path = "src/sharing_ownership_threads.rs"
