[package]
authors = ["dxps <marius.ileana@gmail.com>"]
edition = "2018"
name = "rust_concurrency"
version = "0.1.0"

[dependencies]
crossbeam-channel = "0.5.15"
parking_lot = "0.11.2"

[[bin]]
name = "spawning_a_thread"
path = "src/bin/spawning_a_thread.rs"

[[bin]]
name = "msg_pass_thread"
path = "src/bin/msg_pass_thread.rs"

[[bin]]
name = "sharing_ownership_threads"
path = "src/bin/sharing_ownership_threads.rs"

[[bin]]
name = "arc_mutex_ex1"
path = "src/bin/arc_mutex_ex1.rs"
