[package]
name = "rust_data_structures"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "simple_queue_ex"
path = "src/bin/simple_queue_ex.rs"

[[bin]]
name = "txn_log_ex"
path = "src/bin/txn_log_ex.rs"

[dependencies]
