[package]
name = "rust_generics_traits"
description = "Samples of using Rust generics and traits"
version = "0.1.0"
authors = ["<marius.ileana@gmail.com>"]
edition = "2021"

#--------------------------------------- 

[[bin]]
name = "dyn_dispatch_show1"
path = "src/dyn_dispatch_show1.rs"

[[bin]]
name = "generics_struct_tagged"
path = "src/generics_struct_tagged.rs"

[[bin]]
name = "generics_list_get_max_ref"
path = "src/generics_list_get_max_ref.rs"

[[bin]]
name = "generics_list_get_max_cpy"
path = "src/generics_list_get_max_cpy.rs"

[[bin]]
name = "trait_objects_attrs"
path = "src/trait_objects_attrs.rs"
