[package]
name = "rust_lang_journey"
version = "0.1.0"
authors = ["devisions <marius.ileana@gmail.com>"]
edition = "2018"


[dependencies]

[[bin]]
name = "borrowing_ex1"
path = "src/borrowing_ex1.rs"

[[bin]]
name = "structs_ex1"
path = "src/structs_ex1.rs"

[[bin]]
name = "macros_ex1"
path = "src/macros_ex1.rs"

[[bin]]
name = "ownership_ex1"
path = "src/ownership_ex1.rs"
