[package]
name = "rust_oop"
version = "0.1.0"
authors = ["devisions <marius.ileana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "avg_coll_bin"
path = "src/avg_coll_bin.rs"

[[bin]]
name = "blog_bin"
path = "src/blog_bin.rs"

[lib]
name = "blog"
path = "src/blog.rs"
test = false