[package]
name = "rust_sqlsrv_tiberius"
version = "0.1.0"
edition = "2021"
authors = ["dxps <marius.ileana@gmail.com>"]

#############
[profile.dev]
#############
codegen-units = 18

##############
[dependencies]
anyhow = "1.0.90"
##############

async-std = { version="1.13.0", features = [ "attributes" ] }
dotenvy = { version = "0.15.7"}
once_cell = "1.20.2"
tiberius = { version = "0.12.3", features = [ "sql-browser-async-std" ] }
tokio ={ version = "1.41.0", features = [ "full" ] }

