[package]
name = "rust_xps"
version = "0.1.0"
authors = ["devisions <marius.ileana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.57"

[[bin]]
name = "d1_err_handling"
path = "src/bin/d1_err_handling.rs"

