[package]
name = "warp_auth_server"
version = "0.1.0"
authors = ["devisions <marius.ileana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.2"
tokio = { version = "0.2", features = [ "macros" ] }
serde = { version = "1.0", features = [ "derive" ] }
rand = "0.7.3"
rust-argon2 = "0.8.1"
