[package]
name = "warp_auth_server"
version = "0.1.0"
authors = ["dxps <marius.ileana@gmail.com>"]
edition = "2018"


[dependencies]
warp = "0.3.7"
tokio = { version = "1.43", features = [ "macros", "rt-multi-thread" ] }
serde = { version = "1.0", features = [ "derive" ] }
rand = "0.8.5"
rust-argon2 = "2.1"
