[package]
edition = "2018"
name = "warp_collab_qa_srv"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.11.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.2", features = ["full"]}
warp = "0.3"
