[package]
name = "warp_todo_crud_ex1"
version = "0.1.0"
authors = ["devisions <marius.ileana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = [ "macros" ] }
warp = "0.2.4"
mobc-postgres = { version = "0.5" , features = [ "with-chrono-0_4" ]}
mobc = "0.5"
serde = { version = "1.0", features = [ "derive" ] }
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = [ "serde" ] }
thiserror = "1.0"
