[package]
edition = "2021"
name = "ui_t"
version = "0.1.0"

description = "A simple news reader app that uses egui for the GUI"
license = "MIT"

[dependencies]
api_news = {path = "../api_news", features = ["async"]}
crossterm = "0.21.0"
dotenv = "0.15.0"
termimad = {version = "0.16.4"}
tokio = {version = "1.12.0", features = ["full"]}
