[package]
edition = "2021"
name = "be"
version = "0.1.0"

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
futures = "0.3.21"
thiserror = "1.0.31"
# JSON
serde = "1.0.136"
serde_json = "1.0.79"
serde_derive = "1.0.136"
# Web
warp = "0.3.2"
# DB
sqlx = { version = "0.5.13", features = [ "runtime-tokio-rustls", "postgres" ] }
